force-app/main/default/src/objects/PJN_Log_Event__e/fields/PJN_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>