force-app/main/default/src/objects/PJN_Log_Event__e/fields/PJN_Message__c.field-meta.xml
<CustomField>
    <fullName>PJN_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>