force-app/main/default/src/objects/PJN_Log_Event__e/fields/PJN_SObject_JSON__c.field-meta.xml
<CustomField>
    <fullName>PJN_SObject_JSON__c</fullName>
    <label>SObject JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>