force-app/main/default/src/objects/PJN_Log_Event__e/fields/PJN_Source__c.field-meta.xml
<CustomField>
    <fullName>PJN_Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>